# monoweb

./: .dccache  .dockerignore  .editorconfig  .env.example  .env.local  .eslintignore  .eslintrc  .eslintrc.cjs  .git-blame-ignore-revs  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc  .yarnrc.yml  CONTRIBUTING.md  README.md  a.patch  biome.json  docker-build.sh  docker-compose-prod.yml  docker-compose.yml  doppler.yaml  google.com!larsendigital.no!1772496000!1772582399.xml  justfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  test-ios.sh  test.http  test.txt  tsconfig.json  turbo.json  vercel-ignore.sh
.github/: CODEOWNERS  pull_request_template.md  renovate.json  renovate.yml
.storybook/: main.js  preview-head.html  (+1 more)
apps/grades-sync/: Cargo.toml  README.md
apps/grades-sync/migrations/: 20240209190449_schema.sql  20240209195028_subject.sql  20240209212106_grades.sql
apps/grades-sync/queries/: departments.json  grades.json  subjects.json
apps/grades-sync/src/: department_repository.rs  faculty_repository.rs  grade_repository.rs  hkdir.rs  job.rs  json.rs  main.rs  pg.rs  subject_repository.rs
apps/kvittering-backend/: .env.template  .gitignore  Dockerfile  README.md  deploy.sh  justfile  pyproject.toml  test.sh
apps/kvittering-backend/src/: lambda_entrypoint.py  server.py
apps/kvittering-backend/src/core/: data_types.py  email_service.py  environment_variables.py  get_and_validate_env.py  pdf_combine.py  pdf_generator_service.py  pdf_table.py  send_email.py  test_pdf.py  utils.py
(+3010 files in other folders)
